force-app/main/objects/Account_Plan__c.object
<CustomObject>
    <description>Module to capture Key Account Plan details</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account_Name__r.Owner.FirstName + &apos; &apos; +  Account_Name__r.Owner.LastName</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_System_Use__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (System Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>This field is used to store the related account for Account Plan</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Name__c</fullName>
        <formula>&apos;SHL &apos; + Quarter__c + &quot;/&quot; + Year__c  + &quot; Account Plan - &quot; +   Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <label>Account Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Migrated to Regional - Retired</fullName>
                    <isActive>false</isActive>
                    <label>Migrated to Regional - Retired</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>Created in Account Plan Phase 4 to determine the type of Account Plan</description>
        <inlineHelpText>This field is used to determine the type of Account Plan</inlineHelpText>
        <label>Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Strategies__c</fullName>
        <label>Approved Strategies</label>
        <summaryFilterItems>
            <field>Strategy_and_Goal__c.Approved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Strategy_and_Goal__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Defined_Attribute__c</fullName>
        <label>Business Defined Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buying_Centre_Id__c</fullName>
        <description>This is used to identify if an Account Plan is Regional Account Plan .</description>
        <inlineHelpText>This field shows the value of Buying Centre same as on Account if an Account Plan is regional</inlineHelpText>
        <label>Buying Centre Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cases_Last_12_Months_open_closed__c</fullName>
        <label>All Cases Last 12 mths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_s_Strategy__c</fullName>
        <label>Client’s Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_Screenshot__c</fullName>
        <label>Contact Relationship Screenshot</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contacts_Created_Last_12_Months__c</fullName>
        <inlineHelpText>This count only includes Active Contact records.</inlineHelpText>
        <label>Contacts Created Last 12 mths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts_Created_since_last_review__c</fullName>
        <label>Contacts Created since last review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacts_at_this_Account__c</fullName>
        <label>Contacts at this Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Doc_for_Contact_csv__c</fullName>
        <description>This field is created for back end purposes to save the id of uploaded contact list.</description>
        <label>Content Doc for Contact csv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <label>Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <formula>Account_Name__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Plan_Last_Updated__c</fullName>
        <description>Used to store the value of Date Plan Last Updated</description>
        <label>Date Plan Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_next_Plan_Review__c</fullName>
        <label>Date for next Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Plan_Review__c</fullName>
        <label>Date of Last Plan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_After_AP_Next_Review__c</fullName>
        <formula>Today() - Date_for_next_Plan_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days After AP Next Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_FTE_Number__c</fullName>
        <label>Global # FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_FTEs__c</fullName>
        <formula>Account_Name__r.ZI_Employee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global # FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_trend_Screenshot__c</fullName>
        <label>History trend Screenshot</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>Text(Account_Name__r.Industry)</formula>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Global_HQ_Picklist__c</fullName>
        <label>Location of Global HQ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Global_HQ__c</fullName>
        <label>Location of Global HQ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <inlineHelpText>These are all open support tickets regardless of priority or severity</inlineHelpText>
        <label>Open Support Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Value__c</fullName>
        <label>Open Opportunity Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Created_since_last_Review__c</fullName>
        <label>Opportunities Created since last Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Current_Situation_Outlook__c</fullName>
        <label>Our Current Situation &amp; Outlook</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overview_of_Business__c</fullName>
        <label>Overview of Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD_Strategy__c</fullName>
        <formula>Text(Account_Name__r.RAD_Strategy__c)</formula>
        <label>RAD Strategy  </label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_FTE_Number__c</fullName>
        <label>Regional # FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_FTEs__c</fullName>
        <formula>Account_Name__r.Highest_Employee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional # FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_History__c</fullName>
        <label>Relationship History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Review Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Exposure__c</fullName>
        <label>Risk &amp; Exposure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SHL_BU_Region__c</fullName>
        <formula>TEXT(Account_Name__r.BU__c)</formula>
        <label>SHL BU/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>Account_Name__r.Owner.Manager.FirstName  + &apos; &apos; + Account_Name__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Text( Account_Name__r.Commercial_Segmentation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field used to determine the Regional Account Plan once the Account Plan is switch to Regional from Current</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Switched To Regional</fullName>
                </value>
                <value>
                    <fullName>Current Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_discussed_actions_agreed__c</fullName>
        <label>Subject discussed &amp; actions agreed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Current_SHL_Relationship__c</fullName>
        <label>Summary of Current SHL Relationship</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Tier__c</fullName>
        <formula>Text(Account_Name__r.Target_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <formula>Account_Name__r.Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unapproved_Strategy_Rolloup__c</fullName>
        <label>Unapproved Strategies</label>
        <summaryFilterItems>
            <field>Strategy_and_Goal__c.Approved__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Strategy_and_Goal__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account_Name__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_did_we_last_meet_in_the_organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who did we last meet in the organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkPDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is backend field used for pdf auto creation</description>
        <label>checkPDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Account_Plan_Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Account Plan Retired?</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All_Account_Plans</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Buying_Centre_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Plans</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Plans_Pending_Review</fullName>
        <columns>Account_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Plan_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Date_for_next_Plan_Review__c</columns>
        <columns>Date_of_Last_Plan_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Plan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Plan_Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>My Account Plans Pending Review</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Plans_due_next_90_Days</fullName>
        <columns>Account_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Plan_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Date_for_next_Plan_Review__c</columns>
        <columns>Date_of_Last_Plan_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Plan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date_for_next_Plan_Review__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <label>My Account Plans due next 90 Days</label>
    </listViews>
    <listViews>
        <fullName>My_Approved_Account_Plans</fullName>
        <columns>Account_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Plan_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Date_for_next_Plan_Review__c</columns>
        <columns>Date_of_Last_Plan_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Plan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Plan_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Approved Account Plans</label>
    </listViews>
    <listViews>
        <fullName>My_Draft_Account_Plans</fullName>
        <columns>Account_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Plan_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Date_for_next_Plan_Review__c</columns>
        <columns>Date_of_Last_Plan_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Plan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Plan_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Rejected</value>
        </filters>
        <label>My Draft Account Plans</label>
    </listViews>
    <listViews>
        <fullName>My_Overview_Account_Plans</fullName>
        <columns>Account_Plan_Name__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Plan_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Date_for_next_Plan_Review__c</columns>
        <columns>Date_of_Last_Plan_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Plan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Date_for_next_Plan_Review__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Overdue Account Plans</label>
    </listViews>
    <nameField>
        <displayFormat>ACP-{0000}</displayFormat>
        <label>Account Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>